--- a/sidebar.css
+++ b/sidebar.css
@@ -10,7 +10,7 @@
 
 .accordion li{
   list-style: none;
-  width: 100%;
+  width: 540px;
   margin-bottom: 40px ;
   padding: 10px;
   border-radius: 8px;
